[package]
name = "async_task_queue"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
rand = "0.9.2"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.143"
tokio = {version = "1.47.1",features = ["full"]}
uuid = {version = "1.18.0", features = ["v4"] }
chrono = "0.4"
tower = "0.5.2"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1.3"
bytes = "1.10.1"
tracing = "0.1"
tracing-subscriber = "0.3"
